crates/atopile_parser/src/snapshots/atopile_parser__parser__tests__complex_expr.snap
---
source: crates/atopile_parser/src/parser.rs
expression: result
---
ParseResult {
    output: Some(
        Spanned(
            BinaryOp(
                Spanned(
                    BinaryOp {
                        left: Spanned(
                            BinaryOp(
                                Spanned(
                                    BinaryOp {
                                        left: Spanned(
                                            BinaryOp(
                                                Spanned(
                                                    BinaryOp {
                                                        left: Spanned(
                                                            Port(
                                                                Spanned(
                                                                    PortRef {
                                                                        parts: [
                                                                            Spanned(
                                                                                "v_in",
                                                                                0..4,
                                                                            ),
                                                                        ],
                                                                    },
                                                                    0..4,
                                                                ),
                                                            ),
                                                            0..4,
                                                        ),
                                                        op: Spanned(
                                                            Mul,
                                                            5..6,
                                                        ),
                                                        right: Spanned(
                                                            Port(
                                                                Spanned(
                                                                    PortRef {
                                                                        parts: [
                                                                            Spanned(
                                                                                "r_bottom",
                                                                                7..15,
                                                                            ),
                                                                            Spanned(
                                                                                "value",
                                                                                16..21,
                                                                            ),
                                                                        ],
                                                                    },
                                                                    7..21,
                                                                ),
                                                            ),
                                                            7..21,
                                                        ),
                                                    },
                                                    0..21,
                                                ),
                                            ),
                                            0..21,
                                        ),
                                        op: Spanned(
                                            Div,
                                            22..23,
                                        ),
                                        right: Spanned(
                                            BinaryOp(
                                                Spanned(
                                                    BinaryOp {
                                                        left: Spanned(
                                                            Port(
                                                                Spanned(
                                                                    PortRef {
                                                                        parts: [
                                                                            Spanned(
                                                                                "r_top",
                                                                                25..30,
                                                                            ),
                                                                            Spanned(
                                                                                "value",
                                                                                31..36,
                                                                            ),
                                                                        ],
                                                                    },
                                                                    25..36,
                                                                ),
                                                            ),
                                                            25..36,
                                                        ),
                                                        op: Spanned(
                                                            Add,
                                                            37..38,
                                                        ),
                                                        right: Spanned(
                                                            Port(
                                                                Spanned(
                                                                    PortRef {
                                                                        parts: [
                                                                            Spanned(
                                                                                "r_bottom",
                                                                                39..47,
                                                                            ),
                                                                            Spanned(
                                                                                "value",
                                                                                48..53,
                                                                            ),
                                                                        ],
                                                                    },
                                                                    39..53,
                                                                ),
                                                            ),
                                                            39..53,
                                                        ),
                                                    },
                                                    25..53,
                                                ),
                                            ),
                                            25..53,
                                        ),
                                    },
                                    0..54,
                                ),
                            ),
                            0..54,
                        ),
                        op: Spanned(
                            Within,
                            55..61,
                        ),
                        right: Spanned(
                            Port(
                                Spanned(
                                    PortRef {
                                        parts: [
                                            Spanned(
                                                "v_out",
                                                62..67,
                                            ),
                                        ],
                                    },
                                    62..67,
                                ),
                            ),
                            62..67,
                        ),
                    },
                    0..67,
                ),
            ),
            0..67,
        ),
    ),
    errs: [],
}
