crates/atopile_parser/src/snapshots/atopile_parser__parser__tests__physical_negative.snap
---
source: crates/atopile_parser/src/parser.rs
expression: result
---
ParseResult {
    output: Some(
        Spanned(
            Physical(
                Spanned(
                    PhysicalValue {
                        value: Spanned(
                            "-0.3",
                            0..4,
                        ),
                        unit: Some(
                            Spanned(
                                "V",
                                4..5,
                            ),
                        ),
                        tolerance: None,
                    },
                    0..5,
                ),
            ),
            0..5,
        ),
    ),
    errs: [],
}
