crates/atopile_parser/src/snapshots/atopile_parser__parser__tests__port_ref_nested.snap
---
source: crates/atopile_parser/src/parser.rs
expression: result
---
ParseResult {
    output: Some(
        Spanned(
            PortRef {
                parts: [
                    Spanned(
                        "a",
                        0..1,
                    ),
                    Spanned(
                        "b",
                        2..3,
                    ),
                    Spanned(
                        "c",
                        4..5,
                    ),
                ],
            },
            0..5,
        ),
    ),
    errs: [],
}
