crates/atopile_parser/src/snapshots/atopile_parser__parser__tests__port_ref_simple.snap
---
source: crates/atopile_parser/src/parser.rs
expression: result
---
ParseResult {
    output: Some(
        Spanned(
            PortRef {
                parts: [
                    Spanned(
                        "a",
                        0..1,
                    ),
                ],
            },
            0..1,
        ),
    ),
    errs: [],
}
