crates/atopile_parser/src/snapshots/atopile_parser__parser__tests__specialize.snap
---
source: crates/atopile_parser/src/parser.rs
expression: result
---
ParseResult {
    output: Some(
        Spanned(
            Specialize(
                SpecializeStmt {
                    port: Spanned(
                        PortRef {
                            parts: [
                                Spanned(
                                    "u1",
                                    0..2,
                                ),
                                Spanned(
                                    "a",
                                    3..4,
                                ),
                            ],
                        },
                        0..4,
                    ),
                    value: Spanned(
                        Symbol(
                            "Resistor",
                        ),
                        8..16,
                    ),
                },
            ),
            0..16,
        ),
    ),
    errs: [],
}
